# 7125_Companion_Ass

./: .gitignore  Data_and_Retrieval_Module_Analysis_Report.md  README.md  minimum_implementation_baseline.ipynb  pyproject.toml  requirements.txt
data/: docs.example.json  eval_queries.example.json  rag_knowledge_base.jsonl
src/hkbu_study_companion/: __init__.py  chunking.py  config.py  conversation.py  data.py  ollama_client.py  pipeline.py  prompting.py  retrieval_embed.py  retrieval_tfidf.py
src/hkbu_study_companion/scripts/: chat_cli.py  run_eval.py  ui_tk.py
